# LittleEngine

./: .gitmodules  CMakeLists.txt  README.md  run.sh
shaders/: adaptativeGeom.frag  adaptativeGeom.geom  adaptativeGeom.tesc  adaptativeGeom.tese  displacement.frag  displacement.geom  displacement.tesc  displacement_t.vert  fwRendering.frag  fwRendering.vert  geomNormals.geom  geomVerticesPoints.geom  geomWireframe.frag  geomWireframe.geom  geomWireframe.vert  particleSystemInit.comp  particleSystemSimple.comp  particleSystemSimple.frag  particleSystemSimple.vert  postProcessing.frag  postProcessing.vert  quadSubDiv.frag  quadSubDiv.geom  quadSubDiv.tesc  quadSubDiv.tese  quadSubDiv.vert  triSubDiv.tesc  triSubDiv.tese
src/: main.cpp
src/engine/: Engine.cpp  Engine.h  main.cpp
src/engine/components/: Component.cpp  Component.h  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  ParticleAttractor.cpp  ParticleAttractor.h  Transform.cpp  Transform.h
src/engine/components/examples/: CameraRotateAroundScene.hpp  RotateComponent.hpp
src/engine/graphics/: AttributeVariable.h  BufferArrayObject.cpp  BufferArrayObject.h  BufferObject.cpp  BufferObject.h  FrameBufferObject.cpp  FrameBufferObject.h  IComputable.h  IRenderizable.h  Material.cpp  Material.h  ParticleSystem.cpp  ParticleSystem.h  Plane.h  ProgramObject.cpp  ProgramObject.h  Quad.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderVariable.h  Texture.cpp  Texture.h  Triangle.h  Vertex.h  ViewProj.h
src/engine/managers/: IPublisher.h  ISingleton.h  InputManager.cpp  InputManager.h  MaterialManager.cpp  MaterialManager.h  ObjectManager.cpp  ObjectManager.h  ShaderManager.cpp  ShaderManager.h
src/engine/scene/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  IScene.h  Light.cpp  Light.h
src/engine/scene/scenes/: Scene1.cpp  Scene1.hpp  Scene10.hpp  Scene2.hpp  Scene3.hpp  Scene4.hpp  Scene5.hpp  Scene6.hpp  Scene7.hpp  Scene8.hpp  Scene9.hpp
src/engine/utils/: Clock.cpp  Clock.h  FileReader.cpp  FileReader.h  ImageLoader.cpp  ImageLoader.h  Logger.cpp  Logger.h  OBJReader.cpp  OBJReader.h  PlaneFBO.h
